profile pg alignment fix

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -132,7 +132,6 @@ section{
 	margin-top: 60px;
 }
 #secwrapper{
-	display: inline-block;
 	text-align: center;
 	margin-bottom: 5%;
 } 
